# Relaxation

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md
.cache/clangd/index/: example.cpp.AE1AAA3FBC9F3B46.idx
source/: CMakeLists.txt
source/relaxation/: CMakeLists.txt  relaxation.f08  relaxation.f18  relaxations.h
